fixing the overflowing wrapper

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ img {
 .main-header-wrapper {
     /* border: 2px solid green; */
     padding-bottom: 2px;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 .main-header {
     background-color: var(--black-color);
